Logger now extends Category. This way of doing things ensure backwards compatibility.
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -13,7 +13,9 @@ JSOURCES:=SortAlgo.java Sort.java Trivial.java NumberCruncher.java\
 
 JRMI:=NumberCruncherServer.java
 
-SUBDIRS :=appserver
+SUBDIRS :=
+
+#appserver
 
 # include master-rule file
 include $(DEPTH)/make/make.inc
