--- a/src/java/org/apache/log4j/xml/examples/Makefile
+++ b/src/java/org/apache/log4j/xml/examples/Makefile
@@ -2,7 +2,7 @@
 PKG_DIR :=org/apache/log4j/xml/examples
 DEPTH   :=../../../../../../..
 JSOURCES:=ReportParserError.java XMLSample.java XLevel.java\
-	XCategory.java XTest.java 
+	XLogger.java XTest.java 
 
 
 
