- The use of LogManager is now *pervasive*. This is a big change.
- Fixed some backward compatibility problems.


PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/java/org/apache/log4j/Makefile
+++ b/src/java/org/apache/log4j/Makefile
@@ -9,7 +9,6 @@ JSOURCES:=DailyRollingFileAppender.java\
 	AppenderSkeleton.java\
 	CategoryKey.java\
 	ProvisionNode.java\
-	StressCategory.java \
 	FileAppender.java \
 	SimpleLayout.java\
 	TTCCLayout.java\
@@ -28,6 +27,7 @@ JSOURCES:=DailyRollingFileAppender.java\
         HTMLLayout.java\
         LogManager.java\
 
+#	StressCategory.java \
 
 
 
