--- a/src/java/org/apache/log4j/net/Makefile
+++ b/src/java/org/apache/log4j/net/Makefile
@@ -4,11 +4,12 @@ DEPTH   :=../../../../../..
 JSOURCES:=SyslogAppender.java\
 	JMSAppender.java\
 	JMSSink.java\
-	SocketServer.java\
 	SimpleSocketServer.java\
 	SocketAppender.java\
 	SMTPAppender.java\
 	SocketNode.java\
+
+#	SocketServer.java\
 
 
 SUBDIRS :=test
