--- a/src/java/org/apache/log4j/spi/Makefile
+++ b/src/java/org/apache/log4j/spi/Makefile
@@ -17,6 +17,7 @@ JSOURCES:=OptionHandler.java\
   RepositorySelector.java\
   DefaultRepositorySelector.java\
   LoggerRepository.java\
+  RendererSupport.java\
 
 SUBDIRS := 
 
