added some default email template info for screens.

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -1,3 +1,9 @@
+
+scarab.email.register.fromName=Scarab System
+scarab.email.register.fromAddress=help@scarab.tigris.org
+scarab.email.register.subject=Scarab System Notification
+scarab.email.default.template=email/Default.vm
+
 scarab.email.register.fromName=Scarab System
 scarab.email.register.fromAddress=help@scarab.tigris.org
 scarab.email.register.subject=Account Confirmation
@@ -6,6 +12,14 @@ scarab.email.register.template=email/Confirmation.vm
 scarab.email.modifyissue.fromName=Scarab System
 scarab.email.modifyissue.fromAddress=help@scarab.tigris.org
 scarab.email.modifyissue.template=email/ModifyIssue.vm
+
+scarab.email.approval.fromName=Scarab System
+scarab.email.approval.fromAddress=help@scarab.tigris.org
+scarab.email.approval.template=email/Approval.vm
+
+scarab.email.requireapproval.fromName=Scarab System
+scarab.email.requireapproval.fromAddress=help@scarab.tigris.org
+scarab.email.requireapproval.template=email/RequireApproval.vm
 
 services.PullService.tool.request.scarabR=org.tigris.scarab.tools.ScarabRequestTool
 services.PullService.tool.global.scarabG=org.tigris.scarab.tools.ScarabGlobalTool
@@ -35,3 +49,6 @@ scarab.security.entry.Wizard4.vm="Issue | Enter"
 scarab.security.admin.ModuleAttributeEditor.vm="Module | Edit"
 scarab.security.admin.AttributeShow.vm="Module | Edit"
 scarab.security.admin.AttributeEdit.vm="Module | Edit"
+scarab.security.admin.Approval.vm="Item | Approve"
+scarab.security.MoveIssue.vm="Issue | Edit"
+scarab.security.MoveIssue2.vm="Issue | Edit"
