--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -42,13 +42,13 @@ services.ScarabModuleService.scarab.module.class=org.tigris.scarab.om.ScarabModu
 services.UserService.classname=org.tigris.scarab.services.user.TurbineUserService
 
 # Base permissions for Scarab Pages
-scarab.security.entry.Wizard1.vm="Issue | Enter"
-scarab.security.entry.Wizard2.vm="Issue | Enter"
-scarab.security.entry.Wizard3.vm="Issue | Enter"
-scarab.security.entry.Wizard4.vm="Issue | Enter"
-scarab.security.admin.ModuleAttributeEditor.vm="Module | Edit"
-scarab.security.admin.AttributeShow.vm="Module | Edit"
-scarab.security.admin.AttributeEdit.vm="Module | Edit"
-scarab.security.admin.Approval.vm="Item | Approve"
-scarab.security.MoveIssue.vm="Issue | Edit"
-scarab.security.MoveIssue2.vm="Issue | Edit"
+scarab.security.entry.Wizard1.vm=Issue | Enter
+scarab.security.entry.Wizard2.vm=Issue | Enter
+scarab.security.entry.Wizard3.vm=Issue | Enter
+scarab.security.entry.Wizard4.vm=Issue | Enter
+scarab.security.admin.ModuleAttributeEditor.vm=Module | Edit
+scarab.security.admin.AttributeShow.vm=Module | Edit
+scarab.security.admin.AttributeEdit.vm=Module | Edit
+scarab.security.admin.Approval.vm=Item | Approve
+scarab.security.MoveIssue.vm=Issue | Edit
+scarab.security.MoveIssue2.vm=Issue | Edit
