added more base permission

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -52,3 +52,5 @@ scarab.security.admin.AttributeEdit.vm=Module | Edit
 scarab.security.admin.Approval.vm=Item | Approve
 scarab.security.MoveIssue.vm=Issue | Edit
 scarab.security.MoveIssue2.vm=Issue | Edit
+scarab.security.SaveQuery.vm=User | Edit Preferences
+scarab.security.SaveTemplate.vm=User | Edit Preferences
