Started reorganizing message renderers by package:
- Added sax/AttributesRenderer.java.

- Moved MessageRenderer.java to jms/MessageRenderer.java.

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/java/org/apache/log4j/or/Makefile
+++ b/src/java/org/apache/log4j/or/Makefile
@@ -1,11 +1,10 @@
 
 PKG_DIR :=org/apache/log4j/or
 DEPTH   :=../../../../../..
-JSOURCES:= ObjectRenderer.java\
-	RendererMap.java\
-	DefaultRenderer.java\
-	ThreadGroupRenderer.java\
-	MessageRenderer.java\
+JSOURCES:= DefaultRenderer.java\
+  ObjectRenderer.java\
+  RendererMap.java\
+  ThreadGroupRenderer.java\
 
 
 #ifdef FULL
@@ -13,7 +12,7 @@ JSOURCES:= ObjectRenderer.java\
 #endif
 
 
-SUBDIRS := 
+SUBDIRS := jms sax
 
 # include master-rule file
 include $(DEPTH)/make/make.inc
