Update the log factory

--- a/src/etc/conf/boot-server/log4j.properties
+++ b/src/etc/conf/boot-server/log4j.properties
@@ -4,12 +4,12 @@
 ##                                                                          ##
 ### ====================================================================== ###
 
-### $Id: log4j.properties,v 1.1 2001/08/31 04:26:39 chirino Exp $ ###
+### $Id: log4j.properties,v 1.2 2001/09/11 18:37:56 starksm Exp $ ###
 
 # This creates a server.log appender and a console appender.
 
 # Set the JBossCategoryFactory as the default CategoryFactory
-log4j.categoryFactory=org.jboss.logging.log4j.JBossCategory$JBossCategoryFactory
+log4j.categoryFactory=org.jboss.logging.LoggerFactory
 
 log4j.rootCategory=DEBUG, Default, Console
 
@@ -41,5 +41,5 @@ log4j.appender.Console.layout.ConversionPattern=[%c{1}] %m%n
 # by the JBoss internals to diagnose low level details. This example
 # turns on TRACE level msgs for the org.jboss.ejb.plugins package and its
 # subpackages. This will produce A LOT of logging output.
-#log4j.category.org.jboss.ejb.plugins=TRACE#org.jboss.logging.log4j.TracePriority
+#log4j.category.org.jboss.ejb.plugins=TRACE#org.jboss.logging.TracePriority
 
