added more base permissions

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -42,6 +42,7 @@ services.ScarabModuleService.scarab.module.class=org.tigris.scarab.om.ScarabModu
 services.UserService.classname=org.tigris.scarab.services.user.TurbineUserService
 
 # Base permissions for Scarab Pages
+scarab.security.AssignIssue.vm=Issue | Edit
 scarab.security.entry.Wizard1.vm=Issue | Enter
 scarab.security.entry.Wizard2.vm=Issue | Enter
 scarab.security.entry.Wizard3.vm=Issue | Enter
@@ -54,3 +55,4 @@ scarab.security.MoveIssue.vm=Issue | Edit
 scarab.security.MoveIssue2.vm=Issue | Edit
 scarab.security.SaveQuery.vm=User | Edit Preferences
 scarab.security.SaveTemplate.vm=User | Edit Preferences
+scarab.security.ConfigureIssueList.vm=User | Edit Preferences
