give myself Root for module 5
setup permissions for the Global stuff

comment out permissions for screens that will be renamed/reworked and not
currently working anyway.

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -47,9 +47,11 @@ scarab.security.entry.Wizard1.vm=Issue | Enter
 scarab.security.entry.Wizard2.vm=Issue | Enter
 scarab.security.entry.Wizard3.vm=Issue | Enter
 scarab.security.entry.Wizard4.vm=Issue | Enter
-scarab.security.admin.ModuleAttributeEditor.vm=Module | Edit
-scarab.security.admin.AttributeShow.vm=Module | Edit
-scarab.security.admin.AttributeEdit.vm=Module | Edit
+scarab.security.admin.GlobalAttributeShow.vm=Domain | Edit
+scarab.security.admin.GlobalAttributeEdit.vm=Domain | Edit
+#scarab.security.admin.AttributeShow.vm=Module | Edit
+#scarab.security.admin.AttributeEdit.vm=Module | Edit
+#scarab.security.admin.ModuleAttributeEditor.vm=Module | Edit
 scarab.security.admin.Approval.vm=Item | Approve
 scarab.security.MoveIssue.vm=Issue | Edit
 scarab.security.MoveIssue2.vm=Issue | Edit
