--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.56 2001/08/30 22:28:19 jon Exp $
+# $Id: TurbineResources.properties,v 1.57 2001/09/13 22:37:03 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -50,23 +50,30 @@ system.mail.smtp.from=
 # must be named 'default'. This is used for all logging
 # where an explicit category is not specified.
 
-log4j.category.default = ALL, default
+log4j.category.default = INFO, default
 log4j.appender.default = org.apache.log4j.FileAppender
 log4j.appender.default.file = ${webapp}/logs/turbine.log
 log4j.appender.default.layout = org.apache.log4j.PatternLayout
 log4j.appender.default.layout.conversionPattern = %d [%t] %-5p %c - %m%n
 log4j.appender.default.append = false
 
-# This category is used in the BasePeer class. All
-# SQL generated will be logged if the category
-# priority is set to DEBUG
+# This category is used by Torque.
 
-log4j.category.org.apache.torque = DEBUG, torque
+log4j.category.org.apache.torque = INFO, torque
 log4j.appender.torque = org.apache.log4j.FileAppender
 log4j.appender.torque.file = ${webapp}/logs/torque.log
 log4j.appender.torque.layout = org.apache.log4j.PatternLayout
 log4j.appender.torque.layout.conversionPattern = %d [%t] %-5p %c - %m%n
 log4j.appender.torque.append = false
+
+# This category is used by Fulcrum the services framework.
+
+log4j.category.org.apache.fulcrum = INFO, services
+log4j.appender.services = org.apache.log4j.FileAppender
+log4j.appender.services.file = ${webapp}/logs/services.log
+log4j.appender.services.layout = org.apache.log4j.PatternLayout
+log4j.appender.services.layout.conversionPattern = %d [%t] %-5p %c - %m%n
+log4j.appender.services.append = false
 
 # -------------------------------------------------------------------
 # 
