changed the logging level to DEBUG instead of INFO for the turbine/torque stuff...left fulcrum at INFO cause we aren't really needing to debug it at this point.

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.57 2001/09/13 22:37:03 jon Exp $
+# $Id: TurbineResources.properties,v 1.58 2001/09/13 22:43:28 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -50,7 +50,7 @@ system.mail.smtp.from=
 # must be named 'default'. This is used for all logging
 # where an explicit category is not specified.
 
-log4j.category.default = INFO, default
+log4j.category.default = DEBUG, default
 log4j.appender.default = org.apache.log4j.FileAppender
 log4j.appender.default.file = ${webapp}/logs/turbine.log
 log4j.appender.default.layout = org.apache.log4j.PatternLayout
@@ -59,7 +59,7 @@ log4j.appender.default.append = false
 
 # This category is used by Torque.
 
-log4j.category.org.apache.torque = INFO, torque
+log4j.category.org.apache.torque = DEBUG, torque
 log4j.appender.torque = org.apache.log4j.FileAppender
 log4j.appender.torque.file = ${webapp}/logs/torque.log
 log4j.appender.torque.layout = org.apache.log4j.PatternLayout
